--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -20,10 +20,10 @@
       </button>
     </div>
     <button class="sign-up">SIGN UP</button>
-    <button class="sign-up">
+    <!-- <button class="sign-up">
       <i class="fa-brands fa-google"></i>
       <p>GOOGLE SIGN IN</p>
-    </button>
+    </button> -->
     <span class="sign-in">
       <p>ALREADY HAVE AN ACCOUNT?</p>
       <button id="login" (click)="navigateToLogin()">SIGN IN</button>
