--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -14,7 +14,7 @@
   <div style="height: 30px;display: flex;align-items: center;justify-content: center;">
     <span *ngIf="checkForm" class="error-alert">Kindly fill all fields appropriately...</span>
   </div>
-  <button class="sign-up" (click)="check()" type="submit">SIGN IN</button>
+  <button class="sign-up" (click)="submitForm()" type="submit">SIGN IN</button>
 </form>
   <span class="sign-in">
     <p>DON'T HAVE AN ACCOUNT?</p>
