--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,11 +2,12 @@
     <div class="img-container">
       <img src="../../assets/icons/lock.png" alt="lock" />
     </div>
-    <input type="text" placeholder="First name *" />
-    <input type="text" placeholder="Last name *" />
-    <input type="email" placeholder="Email *" />
+    <form [formGroup]='registerForm'>
+    <input type="text" formControlName="firstName" placeholder="First name *" />
+    <input type="text" formControlName="lastName" placeholder="Last name *" />
+    <input type="email" formControlName="email" placeholder="Email *" />
     <div>
-      <input [type]="showPassword ? 'text' : 'password'" placeholder="Password *" />
+      <input [type]="showPassword ? 'text' : 'password'" formControlName="password" placeholder="Password *" />
       <button (click)="togglePassword()">
           <i *ngIf="showPassword" class="fa-regular fa-eye-slash"></i>
           <i *ngIf="!showPassword" class="fa-regular fa-eye"></i>
@@ -14,16 +15,16 @@
     </div>
     <div>
       <input [type]="showPasswordConfirm ? 'text' : 'password'" placeholder="Repeat Password *" />
-      <button (click)="togglePasswordConfirm();showSuccess();">
+      <button (click)="togglePasswordConfirm()">
           <i *ngIf="showPasswordConfirm" class="fa-regular fa-eye-slash"></i>
           <i *ngIf="!showPasswordConfirm" class="fa-regular fa-eye"></i>
       </button>
     </div>
-    <button class="sign-up">SIGN UP</button>
-    <!-- <button class="sign-up">
-      <i class="fa-brands fa-google"></i>
-      <p>GOOGLE SIGN IN</p>
-    </button> -->
+    <div style="height: 30px;display: flex;align-items: center;justify-content: center;">
+      <span *ngIf="!checkPasswords" class="error-alert">Kindly fill all fields appropriately...</span>
+    </div>
+    <button class="sign-up" (click)="register()">SIGN UP</button>
+  </form>
     <span class="sign-in">
       <p>ALREADY HAVE AN ACCOUNT?</p>
       <button id="login" (click)="navigateToLogin()">SIGN IN</button>
