--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -20,8 +20,11 @@
           <i *ngIf="!showPasswordConfirm" class="fa-regular fa-eye"></i>
       </button>
     </div>
-    <div style="height: 30px;display: flex;align-items: center;justify-content: center;">
-      <span *ngIf="!checkPasswords" class="error-alert">Kindly fill all fields appropriately...</span>
+    <div style="height: 15px;display: flex;align-items: center;justify-content: center;">
+      <span *ngIf="!checkPasswords" class="error-alert">Passwords do not match...</span>
+    </div>
+    <div style="height: 15px;display: flex;align-items: center;justify-content: center;">
+      <span *ngIf="checkForm" class="error-alert">Kindly fill all fields appropriately...</span>
     </div>
     <button class="sign-up" (click)="register()">SIGN UP</button>
   </form>
