--- a/client/src/app/products/products.component.html
+++ b/client/src/app/products/products.component.html
@@ -4,6 +4,6 @@
             <img src="../../assets/icons/exclamation-mark.png" alt="exclamation-mark">
         <p>No products to display</p>
         </span>
-        <button>Add New Product</button>
+        <button (click)='routeToAdd()'>Add New Product</button>
     </div>
 </div>
