--- a/client/src/app/add-product/add-product.component.html
+++ b/client/src/app/add-product/add-product.component.html
@@ -1,1 +1,24 @@
-<p>add-product works!</p>
+<div class="add-products">
+    <form>
+        <div>
+            <label>Product Title</label>
+            <input type="text" id="title" placeholder="Title *" />
+        </div>
+        <div>
+            <label>Product Description</label>
+            <textarea id="description"  rows="6" placeholder="Description *"></textarea>
+        </div>
+        <div>
+            <label>Product Price</label>
+            <input type="number" id="price" placeholder="Price *" />
+        </div>
+        <div>
+            <label>Product Title</label>
+            <select>
+                <option value=true>Yes</option>
+                <option value=false>No</option>
+            </select>
+        </div>
+        <button>ADD PRODUCT</button>
+    </form>
+</div>
