--- a/client/src/app/add-product/add-product.component.html
+++ b/client/src/app/add-product/add-product.component.html
@@ -1,20 +1,20 @@
 <div class="add-products">
-    <form>
+    <form [formGroup]='newProduct'>
         <div>
             <label>Product Title</label>
-            <input type="text" id="title" placeholder="Title *" />
+            <input type="text" formControlName="productName" id="title" placeholder="Title *" />
         </div>
         <div>
             <label>Product Description</label>
-            <textarea id="description"  rows="5" placeholder="Description *"></textarea>
+            <textarea id="description" formControlName="productDescription" rows="5" placeholder="Description *"></textarea>
         </div>
         <div>
             <label>Product Price</label>
-            <input type="number" id="price" placeholder="Price *" />
+            <input type="number" formControlName="productPrice" id="price" placeholder="Price *" />
         </div>
         <div>
             <label>Product Title</label>
-            <select>
+            <select formControlName="productAvailable">
                 <option value=true>Yes</option>
                 <option value=false>No</option>
             </select>
