--- a/client/src/app/add-product/add-product.component.css
+++ b/client/src/app/add-product/add-product.component.css
@@ -12,6 +12,13 @@
     gap:10px;
 }
 
+.error-alert{
+    font-size: 12px;
+    margin-bottom: 10px;
+    color: var(--secondary-color);
+    font-weight: 500;
+}
+
 form {
     width: 100%;
 }
