Update Add Product

--- a/client/src/app/add-product/add-product.component.css
+++ b/client/src/app/add-product/add-product.component.css
@@ -19,6 +19,13 @@
     font-weight: 500;
 }
 
+.error-success{
+    font-size: 12px;
+    margin-bottom: 10px;
+    color: greenyellow;
+    font-weight: 500;
+}
+
 form {
     width: 100%;
 }
