Update Add Products

--- a/client/src/app/add-product/add-product.component.css
+++ b/client/src/app/add-product/add-product.component.css
@@ -22,7 +22,7 @@
 .error-success{
     font-size: 12px;
     margin-bottom: 10px;
-    color: greenyellow;
+    color: green;
     font-weight: 500;
 }
 
