--- a/client/src/app/header/header.component.css
+++ b/client/src/app/header/header.component.css
@@ -9,6 +9,22 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-direction: row;
+}
+
+@media (max-width: 768px) {
+    .header{
+    flex-direction: column;
+    align-items: center;
+    gap:10px;
+    }
+    .header div {
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        width: 100%;
+        flex-direction: row ;
+    }
 }
 
 .header span {
