--- a/client/src/app/products/products.component.css
+++ b/client/src/app/products/products.component.css
@@ -9,6 +9,10 @@
     border-radius: 5px;
 }
 
+.price {
+    color:var(--secondary-color);
+}
+
 .view-products .add-product {
     display: flex;
     align-items: center;
@@ -25,10 +29,22 @@
 }
 
 .view-products .product-list {
-    margin-top: 30px;
+    margin: 20px 10px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap:20px;
+}
+
+@media (max-width: 1000px) {
+    .view-products .product-list {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media (max-width: 500px) {
+    .view-products .product-list {
+        grid-template-columns: repeat(1,1fr) !important;
+    }
 }
 
 .view-products .product-list .product {
@@ -36,11 +52,26 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    gap:10px;
     justify-content: space-between;
-    height: 100px;
     border-radius: 5px;
     font-size: 12px;
     padding: 7px;
+    box-shadow: 0 0 5px 0 #ccc;
+}
+
+.view-products .product-list .product .footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.view-products .product-list .product .footer button {
+    background-color: var(--primary-color);
+    color:#fff;
+    padding: 3px 8px;
+    border-radius: 4px;
 }
 
 .view-products .product-list .product h3 {
