--- a/client/src/app/products/products.component.html
+++ b/client/src/app/products/products.component.html
@@ -19,7 +19,7 @@
         <p>DESCRIPTION: {{ product.productDescription }}</p>
         <div class="footer">
             <p class="price">PRICE: {{ product.productPrice }}</p>
-            <button (click)="routetoView(product.id)">View Product</button>
+            <button (click)="routetoView(product.id,product)">View Product</button>
         </div>
         
       </div>
