--- a/client/src/app/products/products.component.css
+++ b/client/src/app/products/products.component.css
@@ -11,6 +11,7 @@
 
 .price {
     color:var(--secondary-color);
+    font-weight: 500;
 }
 
 .view-products .add-product {
@@ -70,7 +71,7 @@
 .view-products .product-list .product .footer button {
     background-color: var(--primary-color);
     color:#fff;
-    padding: 3px 8px;
+    padding: 3px 12px;
     border-radius: 4px;
 }
 
