--- a/client/src/app/product/product.component.html
+++ b/client/src/app/product/product.component.html
@@ -1,3 +1,8 @@
 <div class="product">
-    <button (click)="viewProducts()">Go Back</button>
+  <button (click)="viewProducts()">Go Back</button>
+  <div>
+    <p>PRODUCT TITLE: {{ Product.productName }}</p>
+    <p>PRODUCT DESCRIPTION: {{ Product.productDescription }}</p>
+    <p>PRODUCT PRICE: {{ Product.productPrice }}</p>
+  </div>
 </div>
