--- a/client/src/app/add-product/add-product.component.html
+++ b/client/src/app/add-product/add-product.component.html
@@ -1,4 +1,7 @@
 <div class="add-products">
+    <div class="view-products">
+        <button (click)="viewProducts()" >Back to Products</button>
+    </div>
     <form [formGroup]='newProduct'>
         <div>
             <label>Product Title</label>
